    + locked and draft documents cannot be suppressed
  Notice that this is just UI level and that deletion will soon
  be implemented at workflow level see ticket #228

Bug fixes:
~~~~~~~~~~
- Improved coding style in cpsinstall.py.
- #699: Fixed workflow of workspaces so that they only manage 'View'.
- #388: better fr/en translations for virtual groups labels (role:Anonymous and
  role:Authenticated)
- #307: Local roles management empty user searching ; there was no search limit
  when searching for members/groups
- #492: Removing local roles to role:Anonymous unblocked roles acquisition
- removed the textarea width set to 100% in nuxeo_css1.css.dtml (this causes a
  layout bug in firefox when displaying tooltips)
- Fixed the way CMFCalendarToolPatch.py was getting the translation_service
  tool. This has the effect to fix CPSSkins unit tests.
- Taking advantage of the new centralized CPSI18n.tests.translations module.
- Fixed translation files through the CPSI18n/bin/fix_pos script.
- Fixed the url displayed in exportRssContentBox (was exportRSSContentBox
  instead of exportRssContentBox)
- Fixed the computeContributors() method to work properly with anonymous
  contributors, previously it was crashing.
- Merged the files nuxeo_css1.css.dtml and nuxeo_css2.css.dtml into one
  default.css.dtml file. This is the first step of the fix for bug #770.
- Modified some ZPT files so that they are valid XHTML 1.0 Strict. This is a
  work in progress to fix #773 "Using XHTML 1.0 Strict by default for CPS
  sites".
- #816: comments for !copy_submit(accept, reject, unpublish...) missing on
  publication history of a document.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Don't use strings for permission names in the installer.
- Added an example display method for formatting Gestalt's content items.
- Replaced Localizer by TranslationService.
- Moved computeContributors from CPSDocument to the utils module.
- Made the modify transition title more readable