@@ -45,3 +45,5 @@ New internal features:
 - Replaced Localizer by TranslationService.
 - Moved computeContributors from CPSDocument to the utils module.
 - Made the modify transition title more readable
+- Roles relevant in context is now an optional argument to the script that
+  returns assigned local roles.
